--- a/server/.env
+++ b/server/.env
@@ -1,2 +1,2 @@
 
-CONNECTION_URL = mongodb+srv://Pepito:Heslokdatabazi123@cluster0.vd9bx.mongodb.net/myFirstDatabase?retryWrites=true&w=majority
+CONNECTION_URL = ...
